<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/verticalBarChart"
        android:icon="@drawable/ic_border_vertical_black_24dp"
        android:contentDescription="@string/vertical_tab_cd"
        android:title="@string/vertical_tab_name" />

    <item
        android:id="@id/horizontalBarChart"
        android:icon="@drawable/ic_border_horizontal_black_24dp"
        android:contentDescription="@string/horizontal_tab_cd"
        android:title="@string/horizontal_tab_name" />

    <item
        android:id="@id/groupedBarChart"
        android:icon="@drawable/ic_group_black_24dp"
        android:contentDescription="@string/grouped_tab_cd"
        android:title="@string/grouped_tab_name" />

    <item
        android:id="@id/stackedBarChart"
        android:icon="@drawable/ic_format_align_justify_black_24dp"
        android:contentDescription="@string/stacked_tab_cd"
        android:title="@string/stacked_tab_name" />
</menu>